src/test/deca/syntax/valid/SansObjet/AndExpr2-Single.deca
// Description:
//    And expression.
//
// Results:
//    (void)
//
// Historique:
//    cree le 08/01/2022

{
        x && 3;
}
